- bugfixes - added Builder for Jar and Class Execution